# simple_gpt

./: .gitignore  CLAUDE.md  MODEL_COMPARISON_README.md  PROGRESS.md  README.md  check_progress.sh  continue_training.sh  direct_generation.py  fetch_gpt2_weights.py  inspect_model.py  model_comparison.py  optimize_gpu_usage.py  pyproject.toml  requirements.txt  run_direct_gpt2.sh  run_direct_training.sh  run_long_training.sh  run_model_comparison.sh  run_optimized_training.sh  run_simple_training.sh  run_slimpajama_training.sh  run_text_generation.sh  run_training_with_test_data.sh  setup.py  start_and_monitor.sh  test_gpu.py  test_long_training.sh  training_results.md
scripts/: long_train.py  monitor_training.py  plot_metrics.py  retrain_from_checkpoint.py  train_extended.py
simple_gpt/: __init__.py  __main__.py
simple_gpt/configs/: __init__.py  model_config.py
simple_gpt/models/: __init__.py  transformer.py
simple_gpt/scripts/: generate.py  train.py
simple_gpt/tests/: test_models.py  test_tokenizers.py
simple_gpt/trainers/: __init__.py  trainer.py
simple_gpt/utils/: __init__.py  data_utils.py  tokenizers.py
